# inalign

./: .env.example  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  DEFENSE_REPORT.md  Dockerfile.bcrypt-fix  LICENSE  Makefile  README.md  SECURITY.md  SHOW_HN.md  docker-compose.yml  ensemble_attack_results.json  gpt5_test_results.json  gpt_attack_hybrid_results.json  hacker_attack_results.json  hybrid_test_results.json  mass_test_results.json  mcp-config.json  start_services.bat  validation_results.json
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  install_deps.bat  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements.txt  setup.py  test_integration.py  test_live.py  test_log_action.json  test_log_action2.json  test_log_action3.json  test_multilang.py  test_optimization.py  test_report.json
backend/alembic/: env.py
backend/alembic/versions/: 002_add_governance_tables.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: __init__.py  health.py
backend/app/api/v1/: __init__.py  activities.py  agents.py  alerts.py  auth.py  cost_guard.py  dashboard.py  living_agent.py  llm_proxy.py  logs.py  monitor.py  platform.py  policies.py  proxy.py  reports.py  router.py  scan.py  sessions.py  webhooks.py
backend/app/core/: __init__.py  exceptions.py  middleware.py  rate_limiter.py  security.py
backend/app/cost_guard/: __init__.py  cache.py  compressor.py  living_agent.py  models.py  policy.py  router.py  runtime_guard.py  tracker.py
backend/app/detectors/: __init__.py
backend/app/detectors/anomaly/: __init__.py  detector.py  ml_detector.py  rules.py
backend/app/detectors/injection/: __init__.py  detector.py  embeddings.py  graph_detector.py  graphrag_classifier.py  (+7 more)
backend/app/efficiency/: __init__.py  engine.py
backend/app/graph/: __init__.py  attack_queries.py  models.py  neo4j_client.py  queries.py  session_extractor.py
backend/app/graphrag/: __init__.py  graph_to_text.py  pattern_matcher.py  pipeline.py  report_generator.py
backend/app/ml/: __init__.py  training_pipeline.py  transformer_finetuner.py
backend/app/models/: __init__.py  activity.py  agent.py  alert.py  api_key.py  database.py  policy.py  usage.py  user.py  webhook.py
backend/app/notifications/: __init__.py  email.py  slack.py  telegram.py  webhook.py
backend/app/optimizer/: __init__.py  advisor.py  cost_simulator.py  model_matcher.py  models_data.py  prompt_optimizer.py  task_analyzer.py
backend/app/platform/: __init__.py  inalign.py
backend/app/protection/: __init__.py  shield.py
backend/app/scanner/: __init__.py  environment_scanner.py
backend/app/schemas/: __init__.py  activity.py  agent.py  alert.py  auth.py  common.py  log.py  policy.py  proxy.py  report.py  scan.py  session.py
backend/app/services/: __init__.py  activity_service.py  alert_service.py  attack_knowledge_service.py  auto_defense.py  continuous_learning.py  efficiency_service.py  graph_labeler.py  input_sandwich.py  log_service.py  notification_dispatcher.py  policy_engine.py  report_service.py  scan_service.py  session_service.py  usage_service.py
backend/app/workers/: alert_worker.py  celery_app.py  cleanup_worker.py  report_worker.py
backend/data/: injection_patterns.json  pii_patterns.json
backend/data/training/: training_data_20260204_163443.jsonl
backend/docs/: PERFORMANCE_REPORT.md
backend/inalign/: __init__.py  __main__.py  cli.py  config.py  guard.py  lite_detector.py
backend/inalign/examples/: langchain_usage.py  proxy_usage.py  sdk_usage.py
backend/inalign/integrations/: __init__.py  langchain.py
backend/inalign/proxy/: __init__.py  context_extractor.py  server.py
backend/mcp_server/: README.md  __init__.py  __main__.py  server.py
backend/notebooks/: combined_training_data.jsonl  train_on_colab.ipynb  training_data_v2.jsonl
backend/scripts/: attack_generator.py  auto_retrain.py  check_graph_quality.py  check_neo4j_data.py  enhance_graph.py  generate_api_key.py  init_db.py  mass_attack_test.py  seed_patterns.py  train_defense_model.py
backend/tests/: advanced_attack_simulation.py  attack_simulation.py  benchmark_jailbreakbench.py  conftest.py  developer_scenario_test.py  developer_scenario_v2_test.py  test_efficiency.py  test_mcp_tools.py  test_neo4j_logging.py  test_optimizer.py  test_platform.py
backend/tests/e2e/: test_full_flow.py
backend/tests/integration/: test_log_api.py  test_neo4j.py  test_report_api.py  test_scan_api.py
backend/tests/redteam/: attack_prompts.py  redteam_report.txt  redteam_results.json  run_redteam.py
backend/tests/unit/: test_anomaly_detector.py  test_graphrag.py  test_injection_detector.py  test_pii_detector.py
mcp-server/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  audit_export-demo-001_20260205_182404.json  certificate_export-demo-001_20260205_182404.html  docker-compose.yml  install.py  proof_export-demo-001_20260205_182404.json  pyproject.toml  setup.py
mcp-server/dashboard/: ARCHITECTURE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
mcp-server/dashboard/src/: App.jsx  api.js  index.css
mcp-server/deploy/: .env.example  Dockerfile.simple  aws-setup.sh  docker-compose.yml  user-data.sh
mcp-server/docker/: entrypoint.sh
mcp-server/landing/: index.html
mcp-server/src/inalign_mcp/: __init__.py  ai_analyzer.py  anchoring.py  api_client.py  audit_export.py  auto_anchor.py  client_manager.py  compliance.py  context.py  dashboard.py  drift_detector.py  graph_rag.py  graph_scanner.py  graph_store.py  install.py  license.py  ml_scanner.py  nl_query.py  ontology.py  ontology_security.py  otel_export.py  owasp.py  payments.py  permissions.py  policy.py  polygon_anchor.py  provenance.py  provenance_graph.py  query_api.py  report.py  report_server.py  risk_analyzer.py  scanner.py  server.py  session_ingest.py  signing.py  sqlite_storage.py  topology.py  trace_finder.py  usage_limiter.py  (+1 more)
mcp-server/tests/: test_full_integration.py  test_multi_agent.py  test_provenance_graph.py  test_sqlite_storage.py
(+196 files in other folders)
