[project]
name = "inalign-backend"
version = "1.0.0"
description = "AI Agent security monitoring and threat detection platform"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "InALign Team", email = "team@inalign.io"},
]
readme = "README.md"
keywords = ["ai", "security", "agent", "monitoring", "threat-detection"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-x",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require test database)",
    "e2e: End-to-end tests (full stack)",
    "slow: Tests that take more than a few seconds",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "PTH",   # flake8-use-pathlib
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "T201",   # print statements (allowed in scripts)
    "RUF012", # mutable class attributes
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["T20", "B011", "S101"]
"scripts/**/*.py" = ["T20"]

# ---------------------------------------------------------------------------
# black
# ---------------------------------------------------------------------------
[tool.black]
target-version = ["py311"]
line-length = 100

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "kombu.*",
    "neo4j.*",
    "redis.*",
    "passlib.*",
    "sentence_transformers.*",
    "langchain.*",
    "langchain_openai.*",
]
ignore_missing_imports = true
